--- a/task-8-imroz/sass/layout/_layout.scss
+++ b/task-8-imroz/sass/layout/_layout.scss
@@ -265,6 +265,12 @@ header {
     z-index: -1;
   }
 
+  @media screen and (max-width: $breakpoint-tab) {
+    p::before {
+      display: none;
+    }
+  }
+
   p {
     font-size: 3rem;
     line-height: 4.8rem;
@@ -390,4 +396,53 @@ header {
 //  =========== Footer ===========
 .footer {
   background-color: #010001;
+  padding: 10rem !important;
+  h4 {
+    color: white;
+    font-size: 3rem;
+  }
+
+  h5 {
+    color: white;
+    font-size: 2rem;
+    margin-top: 1rem;
+  }
+
+  li {
+    margin-bottom: 1rem;
+  }
+
+  &__action {
+    border-bottom: 3px solid $color-gray;
+    padding-bottom: 3rem;
+  }
+
+  &__logo {
+    img {
+      width: 30%;
+      height: 30%;
+    }
+    margin-bottom: 5rem;
+  }
+
+  &__social {
+    margin-top: 2rem;
+    i {
+      font-size: 3rem;
+      color: white;
+      cursor: pointer;
+      transition: all 0.5s;
+
+      &:hover {
+        transform: translateY(-1rem);
+        color: $color-primary;
+      }
+    }
+  }
+
+  @media screen and (max-width: $breakpoint-tab) {
+    .footer__intro {
+      text-align: center;
+    }
+  }
 }
