--- a/task-7-Portfolio/css/style.css
+++ b/task-7-Portfolio/css/style.css
@@ -28,15 +28,32 @@ Global Styles
   box-sizing: border-box;
 }
 
+html,
+body {
+  font-size: 62.5%;
+}
+@media only screen and (max-width: 1200px) {
+  html,
+  body {
+    font-size: 55%;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  html,
+  body {
+    font-size: 50%;
+  }
+}
+
 body {
   background-color: var(--clr-primary);
   line-height: 1.25;
-  font-size: 0.625;
+  overflow-x: hidden;
 }
 
 section {
   width: 100%;
-  margin: 2rem 0;
   padding: 6rem 4rem;
 }
 /*
@@ -55,17 +72,17 @@ h4 {
   letter-spacing: var(--spacing);
   text-transform: capitalize;
   line-height: 1.25;
-  margin-bottom: 0.5rem;
+  margin-bottom: 3.5rem;
   color: white;
 }
 
 h1 {
-  font-size: 5.6rem;
+  font-size: 7rem;
   line-height: 6.5rem;
 }
 
 h2 {
-  font-size: 2.4rem;
+  font-size: 3.4rem;
 }
 h3 {
   font-size: 3.6rem;
@@ -77,15 +94,16 @@ h3 {
 p {
   color: var(--clr-text);
   line-height: 2.4rem;
+  font-size: 2rem;
 }
 
 a,
 li {
   color: white;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
-/* Navbar */
+/*==================== Navbar ====================*/
 header {
   position: absolute;
   z-index: 2;
@@ -128,7 +146,7 @@ nav li:hover a {
 }
 
 .logo span {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   color: white;
 }
 
@@ -176,11 +194,11 @@ nav li:hover a {
   margin-right: 1rem;
 }
 
-/* Carousel */
+/*==================== Carousel ====================*/
 .overlay {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 1;
   background: rgba(39, 43, 54, 0.5);
   background-size: cover;
@@ -226,14 +244,14 @@ nav li:hover a {
 }
 
 .carousel-caption h3 {
-  font-size: 2.5rem;
+  font-size: 4rem;
   color: white;
   font-weight: 400;
 }
 
 .carousel-caption p {
   color: white;
-  font-size: 1.7rem;
+  font-size: 2rem;
   font-weight: 50;
 }
 
@@ -247,4 +265,186 @@ nav li:hover a {
 .carousel-indicators li.active {
   background-color: var(--clr-secondary);
 }
-/* data-aos-anchor="#BLAH" */
+
+/*==================== Project ====================*/
+.nav-link {
+  color: black;
+  border: 1px solid black;
+}
+
+.nav-link.active {
+  background-color: var(--clr-secondary) !important;
+}
+
+.projects__item {
+  margin-top: 30px;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.13);
+  border: none;
+  cursor: pointer;
+}
+
+.card-body {
+  border: 1px solid transparent;
+
+  border-radius: 0 0 1rem 1rem;
+  transition: all 0.5s;
+}
+
+.projects__item:hover .card-body {
+  border-color: var(--clr-secondary);
+  border-top-color: rgb(53, 162, 44);
+  border-top-color: transparent;
+}
+
+.projects__item h3 {
+  font-size: 2rem;
+  transition: all 0.5s;
+}
+
+.projects__item:hover h3 {
+  color: var(--clr-secondary);
+}
+
+/*==================== Project ====================*/
+/* FEATURE */
+.feature {
+  position: relative;
+  background: url("../images/3.jpg") no-repeat center;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+
+}
+
+.feature__title {
+  position: relative;
+  max-width: 750px;
+}
+.feature__title h2 {
+  font-size: 3.6rem;
+  line-height: 4.2rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+.feature__title p {
+  line-height: 2.4rem;
+  font-size: 1.5rem;
+}
+
+.feature__item {
+  padding: 40px 40px;
+  transition: all 0.3s;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(3px);
+  transition: all 0.5s;
+}
+.feature__item i {
+  font-size: 4.8rem;
+  color: #35a22c;
+}
+.feature__item h3 {
+  font-size: 20px;
+  color: #fff;
+  line-height: 30px;
+  padding-top: 25px;
+  font-weight: 800;
+}
+.feature__item p {
+  padding-top: 15px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fff;
+}
+.feature__item:hover {
+  background: #000;
+  border-color: #fff;
+}
+
+
+/* AWARD */
+.award {
+  position: relative;
+  color: #585858;
+  padding: 70px 0;
+}
+.award-bg {
+  background-image: url("../images/memphis_3.png");
+  background-position: bottom left;
+  background-repeat: no-repeat;
+  background-size: 50% auto;
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.award__left {
+  background: rgba(255, 255, 255, 0.25);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  backdrop-filter: blur(3px);
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.3);
+  padding: 45px;
+}
+.award__left h2 {
+  font-size: 36px;
+  line-height: 42px;
+  color: #1a1d2d;
+  font-weight: 700;
+}
+.award__left p {
+  color: #585858;
+  line-height: 24px;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+.award__right {
+  padding: 4.5rem 0 3.5rem;
+}
+.award__right p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+/* FOOTER */
+footer {
+  background: #222;
+}
+.footer__main a {
+  margin-right: 1rem;
+  text-decoration: none;
+  color: #aaa;
+}
+footer a:hover {
+  color: #35a22c;
+}
+.footer__main i {
+  font-size: 1.5rem;
+  width: 42px;
+  height: 42px;
+  line-height: 42px;
+  border-radius: 50%;
+  border: 1px solid #454545;
+  transition: all 0.5s;
+}
+.footer__copies {
+  border-top: 1px solid #454545;
+  padding-top: 30px;
+  margin-top: 30px;
+}
+.footer__copies p {
+  color: #aaa;
+  margin: 0;
+  font-size: 1.8rem;
+}
+.footer__copies a {
+  text-decoration: none;
+  color: #aaa;
+}
