--- a/task-9-Masterwork/sass/components/_button.scss
+++ b/task-9-Masterwork/sass/components/_button.scss
@@ -8,8 +8,24 @@
   padding: 1rem 2rem;
   transition: $transition;
 
-  &:hover{
-      background-color: $primary;
-      color: white;
+  &:hover {
+    background-color: $primary;
+    color: white;
+  }
+}
+
+.primary-btn {
+  font-size: 2rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: $primary;
+  border: 1px solid $primary;
+  border-radius: $border-radius;
+  padding: 1rem 2rem;
+  transition: $transition;
+
+  &:hover {
+    background-color: $primary;
+    color: white;
   }
 }
