--- a/task-9-Masterwork/sass/components/_button.scss
+++ b/task-9-Masterwork/sass/components/_button.scss
@@ -29,3 +29,21 @@
     color: white;
   }
 }
+
+.secondary-btn {
+  font-size: 2rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  background-color: $primary;
+  color: white;
+  border: 1px solid $primary;
+  border-radius: $border-radius;
+  padding: 1rem 2rem;
+  transition: $transition;
+
+  &:hover {
+    color: white;
+    background-color: #d62f58;
+    border-color: #cf2952;
+  }
+}
