--- a/task-9-Masterwork/sass/components/_button.scss
+++ b/task-9-Masterwork/sass/components/_button.scss
@@ -47,3 +47,21 @@
     border-color: #cf2952;
   }
 }
+
+.secondary-white-btn {
+  font-size: 2rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  background-color: #f8f9fa;
+  color: black;
+  border: 1px solid gray;
+  border-radius: $border-radius;
+  padding: 1rem 2rem;
+  transition: $transition;
+
+  &:hover {
+    color: #212529;
+    background-color: #e2e6ea;
+    border-color: #dae0e5;
+  }
+}
