--- a/task-9-Masterwork/css/style.css
+++ b/task-9-Masterwork/css/style.css
@@ -11312,6 +11312,48 @@ p {
   background-color: white;
 }
 
+.solution {
+  background-color: white;
+}
+.solution .card-body {
+  padding: 2rem;
+}
+.solution__heading {
+  font-size: 2rem;
+  color: black;
+}
+.solution__card {
+  margin: 1rem 2rem;
+  padding: 0;
+  transition: all 0.3s ease-in-out;
+}
+.solution__card:hover {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.09);
+  transform: translateY(-0.5rem);
+}
+.solution__card:hover .solution__heading {
+  color: #dc4f72;
+}
+.solution__text {
+  font-size: 1.5rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #eee;
+}
+.solution__btn {
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  position: relative;
+}
+.solution__btn span {
+  font-size: 60%;
+  transition: all 0.3s ease-in-out;
+  position: absolute;
+  top: 7px;
+}
+.solution__btn:hover span {
+  transform: translateX(0.5rem);
+}
+
 .nav-item .nav-link.primary-btn {
   font-size: 2rem;
   font-weight: 400;
@@ -11374,6 +11416,30 @@ p {
   color: #212529;
   background-color: #e2e6ea;
   border-color: #dae0e5;
+}
+
+.tag {
+  padding: 0.5rem 1.6rem;
+  display: inline-block;
+  border-radius: 25px;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 1.5rem;
+}
+
+.tag.red-tag {
+  background: rgba(238, 97, 120, 0.2);
+  color: #dc4f72;
+}
+
+.tag.green-tag {
+  background: rgba(0, 128, 0, 0.2);
+  color: #008000;
+}
+
+.tag.purple-tag {
+  background: rgba(0, 0, 255, 0.2);
+  color: #0000ff;
 }
 
 /*# sourceMappingURL=style.css.map */
