--- a/task-9-Masterwork/css/style.css
+++ b/task-9-Masterwork/css/style.css
@@ -11373,6 +11373,51 @@ p {
   font-size: 1.5rem;
 }
 
+.feature .nav .nav-item {
+  width: 33.3333333333%;
+  text-align: center;
+  border-bottom: 3px solid #c1c1c1;
+  position: relative;
+}
+.feature .nav .nav-item .nav-link {
+  color: #4e5b61;
+  font-weight: 700;
+  font-size: 2.2rem;
+  padding: 1.5rem;
+  margin: 0 auto;
+}
+.feature .nav .nav-item .nav-link::after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  background-color: #dc4f72;
+  height: 0px;
+  width: 100%;
+}
+.feature .nav-pills .nav-link.active {
+  color: #dc4f72;
+  background: none;
+}
+.feature .nav-pills .nav-link.active::after {
+  height: 3px;
+}
+.feature__image {
+  margin: 2rem auto;
+  cursor: pointer;
+  transition: all 0.8s;
+}
+.feature__image-small {
+  width: 90%;
+  height: 90%;
+}
+.feature__image:hover {
+  transform: translateY(-0.5rem);
+}
+.feature h4, .feature .h4 {
+  font-size: 2.5rem;
+}
+
 .nav-item .nav-link.primary-btn {
   font-size: 2rem;
   font-weight: 400;
