--- a/task-9-Masterwork/sass/layout/_layout.scss
+++ b/task-9-Masterwork/sass/layout/_layout.scss
@@ -236,3 +236,61 @@
     }
   }
 }
+
+// ======= Feature =======
+.feature {
+  .nav {
+    .nav-item {
+      width: calc(100% / 3);
+      text-align: center;
+      border-bottom: 3px solid rgb(193, 193, 193);
+      position: relative;
+
+      .nav-link {
+        color: #4e5b61;
+        font-weight: 700;
+        font-size: 2.2rem;
+        padding: 1.5rem;
+        margin: 0 auto;
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -3px;
+          left: 0;
+          background-color: $primary;
+          height: 0px;
+          width: 100%;
+        }
+      }
+    }
+  }
+  .nav-pills .nav-link.active {
+    color: $primary;
+    background: none;
+
+    &::after {
+      height: 3px;
+    }
+  }
+
+  &__image {
+    margin: 2rem auto;
+
+    &-small {
+      width: 90%;
+      height: 90%;
+    }
+
+    cursor: pointer;
+    transition: $transition;
+
+    &:hover {
+      transform: $transformY;
+    }
+  }
+
+  h4 {
+    font-size: 2.5rem;
+  }
+}
