--- a/task-9-Masterwork/sass/base/_typography.scss
+++ b/task-9-Masterwork/sass/base/_typography.scss
@@ -27,6 +27,12 @@ h3 {
   margin-bottom: 0.5rem;
 }
 
+.sub-text {
+  font-size: 1.3rem;
+  font-weight: 300;
+  color: $text-color;
+}
+
 p {
   color: $text-color;
   font-size: 1.8rem;
