--- a/task-9-Masterwork/sass/utils/_utils.scss
+++ b/task-9-Masterwork/sass/utils/_utils.scss
@@ -6,3 +6,13 @@ img.img-curve {
   border-radius: $card-curve;
   transition: 0.3s ease-in-out;
 }
+
+.img-circle {
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  overflow: hidden;
+  background: #f3f6f9;
+  border-radius: 50%;
+  border: 3px solid $primary;
+}
