--- a/task-9-Masterwork/sass/utils/_utils.scss
+++ b/task-9-Masterwork/sass/utils/_utils.scss
@@ -8,8 +8,11 @@ img.img-curve {
 }
 
 .img-circle {
-  width: 100px;
-  height: 100px;
+  min-width: 100px;
+  min-height: 100px;
+  max-width: 100px;
+  max-height: 100px;
+
   display: inline-block;
   overflow: hidden;
   background: #f3f6f9;
