--- a/task-9-Masterwork/css/style.css
+++ b/task-9-Masterwork/css/style.css
@@ -11132,6 +11132,11 @@ html {
   overflow-x: hidden;
 }
 
+@media only screen and (max-width: 576px) {
+  html {
+    font-size: 55%;
+  }
+}
 img {
   width: 100%;
   height: 100%;
