--- a/task-9-Masterwork/sass/base/_base.scss
+++ b/task-9-Masterwork/sass/base/_base.scss
@@ -12,6 +12,12 @@ html {
   overflow-x: hidden;
 }
 
+@media only screen and (max-width: 576px) {
+  html {
+    font-size: 55%;
+  }
+}
+
 img {
   width: 100%;
   height: 100%;
