--- a/task-9-Masterwork/css/style.css
+++ b/task-9-Masterwork/css/style.css
@@ -11523,10 +11523,15 @@ p {
   border-top: 1px solid #eaeaea;
 }
 .footer__copyright li {
-  margin: 0 3rem;
+  margin: 0 1.5rem;
 }
 .footer__copyright .fa-brands {
   font-size: 3rem;
+}
+@media only screen and (max-width: 576px) {
+  .footer__copyright .fa-brands {
+    font-size: 2.5rem;
+  }
 }
 
 .nav-item .nav-link.primary-btn {
