--- a/task-9-Masterwork/sass/layout/_layout.scss
+++ b/task-9-Masterwork/sass/layout/_layout.scss
@@ -409,10 +409,16 @@
     border-top: 1px solid #eaeaea;
 
     li {
-      margin: 0 3rem;
+      margin: 0 1.5rem;
     }
     .fa-brands {
       font-size: 3rem;
+
+      @media only screen and (max-width: 576px) {
+        & {
+          font-size: 2.5rem;
+        }
+      }
     }
   }
 }
