products section completed

--- a/task-11-cyberphone/sass/helpers/_variable.scss
+++ b/task-11-cyberphone/sass/helpers/_variable.scss
@@ -66,11 +66,15 @@ $breakpoints: (
   "small-down": 575.98px,
 );
 
+// Box shadow
+$box-shadow: 6px 6px 12px #e2ebfc, -6px -6px 12px #fff;
+
+// Bootstrap spacer
 $spacer: 3rem;
 $spacers: (
   0: 0,
   1: $spacer * 0.25,
-  2: $spacer * 0.5,
+  2: $spacer * 0.8,
   3: $spacer,
   4: $spacer * 1.5,
   5: $spacer * 5,
