--- a/task-11-cyberphone/sass/main.scss
+++ b/task-11-cyberphone/sass/main.scss
@@ -8,5 +8,7 @@
 
 @import "./layouts/header";
 @import "./layouts/carousel";
+@import "./layouts/products";
 
 @import "./components/button";
+@import "./components/card";
