--- a/task-11-cyberphone/sass/components/_button.scss
+++ b/task-11-cyberphone/sass/components/_button.scss
@@ -30,3 +30,21 @@
     opacity: 0.75;
   }
 }
+
+.btnPhone-shadow {
+  @include styleButton(
+    $color-white-1,
+    $pd-6,
+    $pd-1 - 5,
+    none,
+    $bd-1 + 2,
+    $ls-2
+  );
+  @include styleText($color-blue-2, $fs-1 - 4, $fw-2);
+  box-shadow: 2px 2px 4px $color-white-2, -2px -2px 4px $color-white-3;
+  transition: 0.5s;
+  &:hover {
+    box-shadow: inset 1px 1px 3px $color-white-2,
+      inset -2px -2px 5px $color-white-3;
+  }
+}
