--- a/task-11-cyberphone/sass/layouts/_carousel.scss
+++ b/task-11-cyberphone/sass/layouts/_carousel.scss
@@ -18,3 +18,22 @@
     margin-bottom: $mg-2;
   }
 }
+
+//responsive
+@include responsive("large-down") {
+  .phoneCarousel {
+    padding: $pd-8 0;
+  }
+}
+@include responsive("medium-down") {
+  .phoneCarousel {
+    h1 {
+      font-size: $fs-8;
+    }
+  }
+}
+@include responsive("small-down") {
+  .phoneCarousel {
+    padding: $pd-5 0;
+  }
+}
