--- a/task-11-cyberphone/sass/layouts/_header.scss
+++ b/task-11-cyberphone/sass/layouts/_header.scss
@@ -48,3 +48,14 @@ header {
     }
   }
 }
+
+//responsive
+@include responsive("large-down") {
+  header {
+    #phoneNavbar {
+      .nav-link {
+        text-align: center;
+      }
+    }
+  }
+}
