--- a/task-11-cyberphone/sass/main.scss
+++ b/task-11-cyberphone/sass/main.scss
@@ -9,6 +9,7 @@
 @import "./layouts/header";
 @import "./layouts/carousel";
 @import "./layouts/products";
+@import "./layouts/footer";
 
 @import "./components/button";
 @import "./components/card";
