--- a/task-11-cyberphone/sass/layouts/_products.scss
+++ b/task-11-cyberphone/sass/layouts/_products.scss
@@ -5,3 +5,9 @@
     @include styleText($color-dark-2, $fs-6, $fw-2);
   }
 }
+
+@include responsive("small-down") {
+  .products {
+    width: 90%;
+  }
+}
