add darkmode toggler

--- a/task-11-cyberphone/sass/helpers/_variable.scss
+++ b/task-11-cyberphone/sass/helpers/_variable.scss
@@ -43,8 +43,11 @@ $pd-5: 100px;
 $pd-6: 8px;
 $pd-7: 60px;
 $pd-8: 150px;
+$pd-9: 5px;
+$pd-10: 20px;
 
 //Margin
+$mg-0: 5px;
 $mg-1: 30px;
 $mg-2: 25px;
 $mg-3: 70px;
