--- a/task-11-cyberphone/sass/main.scss
+++ b/task-11-cyberphone/sass/main.scss
@@ -13,3 +13,11 @@
 
 @import "./components/button";
 @import "./components/card";
+@import "./components/sidebarmini";
+
+@import "./themes/dark/resetDark";
+@import "./themes/dark/buttonDark";
+@import "./themes/dark/cardDark";
+@import "./themes/dark/headerDark";
+@import "./themes/dark/carouselDark";
+@import "./themes/dark/footerDark";
