--- a/task-11-cyberphone/css/style.css
+++ b/task-11-cyberphone/css/style.css
@@ -11251,35 +11251,33 @@ header .nav-item .active::after {
     padding: 100px 0;
   }
 }
-.products {
-  background-color: #f5f9fe;
-}
 .products--title {
   color: #121212;
   font-size: 2.95rem;
   font-weight: 600;
 }
 
-@media screen and (max-width: 575.98px) {
-  .products {
-    width: 90%;
-  }
-}
-.footerPhone {
+.footer-phone {
   background-color: #2a73dd;
   padding-bottom: 60px;
   color: #fff;
 }
-.footerPhone img {
+.footer-phone img {
   margin-bottom: 60px;
 }
-.footerPhone .nav-link {
+.footer-phone .nav-link {
   color: #fff;
-  font-size: 2.5rem;
+  font-size: 1.7rem;
   font-weight: 600;
 }
-.footerPhone .nav-link:hover {
+.footer-phone .nav-link:hover {
   opacity: 0.75;
+}
+.footer-phone .footer__light {
+  display: block;
+}
+.footer-phone .footer__dark {
+  display: none;
 }
 
 .btnPhone-white {
@@ -11356,6 +11354,152 @@ header .nav-item .active::after {
 .card-phone__rating i {
   font-size: 1.5rem;
   color: #f9d412;
+}
+
+.sidebarMini {
+  position: fixed;
+  top: 25%;
+  right: 0;
+  z-index: 500;
+  width: 400px;
+  background-color: #2196f3;
+  transform: translateX(100%);
+  transition: 0.5s;
+  border-left: 1px solid #2196f3;
+  color: #fff;
+}
+.sidebarMini .sidebarMini__button {
+  background: #2196f3;
+  padding: 5px 20px;
+  border: 1px solid #2196f3;
+  border-radius: 8px 0 0 8px;
+  letter-spacing: 0.035rem;
+  position: fixed;
+  transform: translateX(-100%);
+  transition: 0.5s;
+  color: #fff;
+}
+.sidebarMini .sidebarMini__button:focus {
+  outline: none;
+}
+.sidebarMini .sidebarMini__content {
+  width: 170px;
+  padding: 20px;
+  text-align: center;
+}
+.sidebarMini .sidebarMini__content h2, .sidebarMini .sidebarMini__content .h2 {
+  font-size: 14px;
+}
+.sidebarMini .sidebarMini__content .switch {
+  height: 25px;
+  width: 50px;
+  margin: 0 10px;
+  position: relative;
+}
+.sidebarMini .sidebarMini__content .switch input {
+  display: none;
+}
+.sidebarMini .sidebarMini__content .switch input:checked + .slider::before {
+  transform: translateX(22px);
+}
+.sidebarMini .sidebarMini__content .switch .slider {
+  background-color: #2a73dd;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  border-radius: 34px;
+  cursor: pointer;
+}
+.sidebarMini .sidebarMini__content .switch .slider::before {
+  content: "";
+  width: 18px;
+  height: 18px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  bottom: 4px;
+  left: 4px;
+  transition: 0.5s;
+}
+.sidebarMini.is-opened {
+  transform: translateX(60%);
+}
+
+html.darkMode,
+body.darkMode {
+  background-color: #121212;
+}
+
+.darkMode .section-title {
+  color: #2196f3;
+}
+
+.darkMode .btnPhone-white {
+  box-shadow: none;
+}
+.darkMode .btnPhone-shadow {
+  box-shadow: none;
+  background-color: transparent;
+  border: 2px solid #2a73dd;
+}
+.darkMode .btnPhone-shadow:hover {
+  box-shadow: none;
+  background-color: #2a73dd;
+  color: #fff;
+}
+
+.darkMode .card-phone {
+  box-shadow: none;
+  background-color: #212121;
+}
+.darkMode .card-phone img {
+  box-shadow: none;
+}
+.darkMode .card-phone .card-body h3, .darkMode .card-phone .card-body .h3,
+.darkMode .card-phone .card-body p {
+  color: #2196f3;
+}
+
+.darkMode header {
+  background-color: #353536;
+  box-shadow: none;
+}
+.darkMode header .navbar-brand {
+  color: #2196f3;
+}
+.darkMode header .navbar-toggler-icon {
+  color: #2196f3;
+}
+.darkMode header #navbarTogglerDemo01 .nav-link {
+  color: #fff;
+}
+.darkMode header #navbarTogglerDemo01 .nav-link:hover {
+  color: #2196f3;
+}
+.darkMode header #navbarTogglerDemo01 .active .nav-link {
+  color: #2196f3;
+}
+
+.darkMode .carousel {
+  background-image: url("../../../images/product-header-bg-dark.jpg");
+}
+.darkMode .carousel p {
+  color: #fff;
+}
+.darkMode .carousel h1, .darkMode .carousel .h1,
+.darkMode .carousel h3,
+.darkMode .carousel .h3 {
+  color: #2196f3;
+}
+
+.darkMode .footer-phone .footer__light {
+  display: none;
+}
+.darkMode .footer-phone .footer__dark {
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
