add edit food function

--- a/task-13-food-dashboard/app/views/food-list.html
+++ b/task-13-food-dashboard/app/views/food-list.html
@@ -169,6 +169,7 @@
                 <tr class="bg-warning text-white">
                   <th>ID</th>
                   <th>Tên</th>
+                  <th>Hình</th>
                   <th>Loại</th>
                   <th>Giá</th>
                   <th>Khuyến Mãi</th>
@@ -321,12 +322,7 @@
             >
               Close
             </button>
-            <button
-              type="button"
-              class="btn btn-warning"
-              id="btnCapNhat"
-              onclick="editItem()"
-            >
+            <button type="button" class="btn btn-warning" id="btnCapNhat">
               Cập Nhật
             </button>
             <button
